--- a/style.css
+++ b/style.css
@@ -93,3 +93,19 @@ section .read-more {
   justify-content: right;
 }
 
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 750px;
+  padding: 2.5vh 0vh;
+  color: white;
+  gap: 1vh;
+}
+
+footer img {
+  width: 15%;
+  height: auto;
+}
+
