--- a/style.css
+++ b/style.css
@@ -1,95 +1,225 @@
-@import url("https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap");
 
 * {
+  padding: 0px;
   margin: 0px;
   box-sizing: border-box;
-  font-family: "Luckiest Guy", cursive;
-}
-
-body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-image: url(./img/fond.png);
-}
-
-header {
-  max-width: 750px;
-  width: 100%;
-}
-
-main {
-  max-width: 750px;
-  width: 100%;
-  background-color: white;
-  padding: 2.5vw;
-  padding-top: 0px;
 }
 
 nav {
+  width: 100%;
+  height: fit-content;
+  background-color: #fa9100;
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
   align-items: center;
-  background-color: #27032d;
-  padding-top: 2vh;
-  padding-bottom: 2vh;
+  border-bottom: #fecb41 solid 5px;
+  border-top: #fecb41 solid 5px;
+  margin-top: 10vh;
 }
 
-nav h1 {
-  display: none;
+nav img {
+  height: auto;
+  width: 5%;
+  transform: translate(0%, -25%);
 }
 
 nav ul {
+  width: 25%;
   color: white;
   display: flex;
   list-style: none;
   justify-content: space-evenly;
-  width: 50%;
-  font-family: "Luckiest Guy", cursive;
-  font-weight: 400;
-  padding: 0px;
 }
 
-nav img {
-  width: 20%;
-  height: auto;
+nav ul li {
+  font-size: 1.5em;
+  font-family: "Comic Neue", cursive;
+  margin-bottom: 1vh;
 }
 
-section h2 {
-  font-family: "Luckiest Guy", cursive;
-  color: #27032d;
-  margin: 1vh 0vh;
-}
-
-section img {
-  width: 25%;
-  float: left;
-  margin-right: 1vh;
-}
-
-section * {
-  color: gray;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: 600;
-}
-
-.read-more a {
-  border: none;
-  background-color: #27032d;
-  border-radius: 0px;
-  color: white;
-  padding: 1vw;
-  font-family: Arial, Helvetica, sans-serif;
+nav ul li a {
   text-decoration: none;
+  color: white;
 }
 
-iconify-icon {
-  color: #27032d;
+nav ul li::first-letter {
+  text-transform: uppercase;
 }
 
-section .read-more {
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h1 {
+  text-transform: uppercase;
+  font-family: "Comic Neue", cursive;
+  color: #414852;
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 15px;
+}
+
+iframe {
+  width: 100%;
+  max-width: 800px;
+}
+p {
+  width: 100%;
+  max-width: 800px;
+  color: #636971;
+  font-family: "Roboto", sans-serif;
+  line-height: 1.5em;
+  text-align: center;
+  margin-top: 2.5vh;
+}
+
+.backups_stats {
   display: flex;
   width: 100%;
-  justify-content: right;
+  gap: 2vw;
+  padding-left: 2vw;
+  padding-right: 2vw;
+  margin-top: 1vh;
 }
 
+.backups {
+  background-color: #e9e9e9;
+  width: 70%;
+  display: inline-block;
+  max-width: 1100px;
+  padding: 5vh;
+}
+
+.backups h2 {
+  font-family: "Comic Neue", cursive;
+  color: #f99000;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 2.5em;
+}
+
+.backups article {
+  display: inline-block;
+  width: 50%;
+  margin-top: 2.5vh;
+}
+
+.backups article p {
+  margin: 0px;
+  text-align: left;
+  line-height: 1.5em;
+}
+
+.backups article h3 {
+  font-family: "Comic Neue", cursive;
+  color: #414852;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2.5em;
+  margin-bottom: 1vh;
+  gap: 10px;
+  text-transform: capitalize;
+}
+
+.backups article ul {
+  padding-left: 10%;
+  font-family: "Comic Neue", cursive;
+  color: #414852;
+}
+
+.backups div {
+  display: flex;
+  width: 100%;
+  gap: 5vw;
+}
+
+.backups article img {
+  border-radius: 2vw;
+  width: 50%;
+  height: auto;
+  float: left;
+  margin-right: 5%;
+}
+
+.text-grey {
+  color: #414852;
+}
+
+iconify-icon[icon="fa6-regular:floppy-disk"] {
+  color: #f99000;
+}
+
+.buttons-read {
+  width: 100%;
+  display: flex;
+  justify-content: right;
+  margin-top: 1vh;
+}
+
+.buttons-read::first-letter {
+  text-transform: uppercase;
+}
+
+.btn-read {
+  font-family: "Comic Neue", cursive;
+  background-color: #333333;
+  color: white;
+  text-decoration: none;
+  padding: 1vw;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.stats {
+  display: inline-block;
+  width: 30%;
+  background-color: #f99000;
+  border: #fecb41 5px solid;
+  padding: 2vh;
+  height: fit-content;
+}
+
+.stats h2 {
+  font-family: "Comic Neue", cursive;
+  color: white;
+  text-transform: uppercase;
+  font-size: 1.5em;
+  margin-bottom: 5%;
+}
+
+.stats article {
+  margin-top: 5%;
+}
+
+.stats article h3 {
+  font-family: "Comic Neue", cursive;
+  display: flex;
+  align-items: center;
+  color: #333333;
+  font-size: 2em;
+  gap: 10px;
+}
+
+.stats article p {
+  text-align: left;
+  color: white;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #333333;
+  padding-top: 2.5vh;
+  padding-bottom: 2.5vh;
+  color: white;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+  gap: 15px;
+  margin-top: 2vh;
+}
