--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Coda+Caption:wght@800&family=Norican&family=PT+Sans&display=swap");
 
 * {
   padding: 0px;
@@ -6,221 +6,149 @@
   box-sizing: border-box;
 }
 
-nav {
+header {
+  background-image: url(./img/fond.jpg);
+  background-size: cover;
+  padding-bottom: 25vh;
+}
+
+header nav {
+  padding-top: 5vh;
+  padding-bottom: 5vh;
+}
+
+header nav ul {
+  display: flex;
   width: 100%;
   height: fit-content;
-  background-color: #fa9100;
+  list-style: none;
+  justify-content: center;
+  gap: 10%;
+  padding: 0px;
+}
+
+header nav ul li a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-bottom: #fecb41 solid 5px;
-  border-top: #fecb41 solid 5px;
-  margin-top: 10vh;
-}
-
-nav img {
-  height: auto;
-  width: 5%;
-  transform: translate(0%, -25%);
-}
-
-nav ul {
-  width: 25%;
   color: white;
-  display: flex;
-  list-style: none;
-  justify-content: space-evenly;
-}
-
-nav ul li {
-  font-size: 1.5em;
-  font-family: "Comic Neue", cursive;
-  margin-bottom: 1vh;
-}
-
-nav ul li a {
   text-decoration: none;
+  font-family: "Norican", cursive;
+  font-size: 1.5em;
+}
+
+header figure {
+  background-color: hsla(0, 0%, 84%, 0.4);
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 1.5em;
+}
+
+header h1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10vh;
+  margin-bottom: 10vh;
+  font-size: 5em;
+  position: relative;
+  text-shadow: black 1px 0 10px;
+}
+
+.second-element {
+  position: absolute;
+  top: 100%;
+  transform: translateY(-50%);
+}
+
+.text-white {
   color: white;
 }
 
-nav ul li::first-letter {
-  text-transform: uppercase;
+.font-pt-sans {
+  font-family: "PT Sans", sans-serif;
+}
+
+.font-norican {
+  font-family: "Norican", cursive;
+}
+
+.font-coda {
+  font-family: "Coda Caption", sans-serif;
+}
+
+nav {
+  background-color: hsla(0, 0%, 0%, 0.4);
+}
+
+.text-yellow {
+  color: #d9a017;
+}
+
+iconify-icon {
+  color: white;
+}
+
+hr {
+  margin-top: 5vh;
+  margin-bottom: 5vh;
+  border: 1px solid #4f9eb0;
+  width: 90%;
 }
 
 main {
+  background-color: #00738d;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-h1 {
-  text-transform: uppercase;
-  font-family: "Comic Neue", cursive;
-  color: #414852;
-  text-align: center;
-  margin-top: 30px;
-  margin-bottom: 15px;
-}
-
-iframe {
-  width: 100%;
-  max-width: 800px;
-}
-p {
-  width: 100%;
-  max-width: 800px;
-  color: #636971;
-  font-family: "Roboto", sans-serif;
-  line-height: 1.5em;
-  text-align: center;
-  margin-top: 2.5vh;
-}
-
-.backups_stats {
+article {
   display: flex;
-  width: 100%;
-  max-width: 1100px;
-  gap: 2vw;
-  padding-left: 2vw;
-  padding-right: 2vw;
-  margin-top: 1vh;
+  flex-direction: column;
+  align-items: center;
+  width: 90%;
 }
 
-.backups {
-  background-color: #e9e9e9;
-  width: 70%;
-  display: inline-block;
-  max-width: 1100px;
-  padding: 5vh;
-}
-
-.backups h2 {
-  font-family: "Comic Neue", cursive;
-  color: #f99000;
-  text-align: center;
-  text-transform: uppercase;
-  font-size: 2.5em;
-}
-
-.backups article {
-  display: inline-block;
-  width: 50%;
-  margin-top: 2.5vh;
-}
-
-.backups article p {
-  margin: 0px;
-  text-align: left;
-  line-height: 1.5em;
-}
-
-.backups article h3 {
-  font-family: "Comic Neue", cursive;
-  color: #414852;
+article h2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 5vh;
   position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 2.5em;
-  margin-bottom: 1vh;
-  gap: 10px;
-  text-transform: capitalize;
 }
 
-.backups article ul {
-  padding-left: 10%;
-  font-family: "Comic Neue", cursive;
-  color: #414852;
-}
-
-.backups div {
-  display: flex;
-  width: 100%;
-  gap: 5vw;
-}
-
-.backups article img {
-  border-radius: 2vw;
-  width: 50%;
-  height: auto;
-  float: left;
-  margin-right: 5%;
-}
-
-.text-grey {
-  color: #414852;
-}
-
-iconify-icon[icon="fa6-regular:floppy-disk"] {
-  color: #f99000;
-}
-
-.buttons-read {
-  width: 100%;
-  display: flex;
-  justify-content: right;
-  margin-top: 1vh;
-}
-
-.buttons-read::first-letter {
-  text-transform: uppercase;
-}
-
-.btn-read {
-  font-family: "Comic Neue", cursive;
-  background-color: #333333;
-  color: white;
-  text-decoration: none;
-  padding: 1vw;
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-.stats {
-  display: inline-block;
-  width: 30%;
-  background-color: #f99000;
-  border: #fecb41 5px solid;
-  padding: 2vh;
-  height: fit-content;
-}
-
-.stats h2 {
-  font-family: "Comic Neue", cursive;
-  color: white;
-  text-transform: uppercase;
-  font-size: 1.5em;
-  margin-bottom: 5%;
-}
-
-.stats article {
-  margin-top: 5%;
-}
-
-.stats article h3 {
-  font-family: "Comic Neue", cursive;
-  display: flex;
-  align-items: center;
-  color: #333333;
+article h2 span:first-child {
+  color: #d9a017;
+  text-shadow: black 1px 0 10px;
+  font-family: "Coda Caption", sans-serif;
   font-size: 2em;
-  gap: 10px;
 }
 
-.stats article p {
-  text-align: left;
-  color: white;
+article h2 span:first-child::first-letter {
+  text-transform: uppercase;
 }
 
-footer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #333333;
-  padding-top: 2.5vh;
-  padding-bottom: 2.5vh;
+article h2 span:last-child {
   color: white;
-  font-family: "Roboto", Arial, Helvetica, sans-serif;
-  gap: 15px;
-  margin-top: 2vh;
+  font-family: "Norican", cursive;
+  font-size: 1.5em;
+  position: absolute;
+  transform: translateY(90%);
+  text-shadow: black 1px 0 10px;
+  text-align: center;
+}
+
+article h2 span:last-child::first-letter {
+  text-transform: uppercase;
+}
+
+article iframe {
+  width: 100%;
+}
+
+.float-left {
+  float: left;
 }
