--- a/style.css
+++ b/style.css
@@ -1,359 +1,176 @@
-@import url("https://fonts.googleapis.com/css2?family=Coda+Caption:wght@800&family=Norican&family=PT+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alkatra:wght@600;700&display=swap");
+
+:root {
+  --red: #f7073b;
+  --grey: #5e605e;
+  --black: #1a1a1a;
+  --whitegreen: #d1e000;
+  --blackgreen: #0ea532;
+}
 
 * {
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
-  color: white;
 }
 
-:root {
-  --blue: #00738d;
-  --yellow: #d9a017;
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: url("./img/bg.jpg");
 }
-
 header {
-  background-image: url(./img/fond.jpg);
-  background-size: cover;
-  padding-bottom: 25vh;
-}
-
-header nav {
-  padding-top: 5vh;
-  padding-bottom: 5vh;
-}
-
-header nav ul {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
-  height: fit-content;
-  list-style: none;
-  justify-content: center;
-  gap: 10%;
-  padding: 0px;
-}
-
-header nav ul li a {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: white;
-  text-decoration: none;
-  font-family: "Norican", cursive;
-  font-size: 1.5em;
-}
-
-header figure {
-  background-color: hsla(0, 0%, 84%, 0.4);
-  text-transform: uppercase;
-  text-align: center;
-  font-size: 1.5em;
-  color: black;
-}
-
-header h1 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 10vh;
-  margin-bottom: 10vh;
-  font-size: 5em;
-  position: relative;
-  text-shadow: black 1px 0 10px;
-}
-
-header h1 span {
-  text-align: center;
-}
-
-.second-element {
-  position: absolute;
-  top: 100%;
-  transform: translateY(-50%);
-}
-
-.text-white {
-  color: white;
-}
-
-.font-pt-sans {
-  font-family: "PT Sans", sans-serif;
-}
-
-.font-norican {
-  font-family: "Norican", cursive;
-}
-
-.font-coda {
-  font-family: "Coda Caption", sans-serif;
-}
-
-nav {
-  background-color: hsla(0, 0%, 0%, 0.4);
-}
-
-.text-yellow {
-  color: var(--yellow);
-}
-
-iconify-icon {
-  color: white;
 }
 
 main {
-  background-color: #00738d;
+  width: 70%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-article {
-  font-family: "PT Sans", sans-serif;
-  width: 90%;
-}
-
-article h2 {
+h2 {
+  margin-top: 2vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 5vh;
-  position: relative;
 }
 
-article h2 span:first-child {
-  color: var(--yellow);
-  text-shadow: black 1px 0 10px;
-  font-family: "Coda Caption", sans-serif;
+h2 span {
+  line-height: 1em;
+  font-family: "Alkatra", cursive;
+  font-weight: bold;
   font-size: 2em;
-}
-
-article h2 span:first-child::first-letter {
-  text-transform: uppercase;
-}
-
-article h2 span:last-child {
-  color: white;
-  font-family: "Norican", cursive;
-  font-size: 1.5em;
-  position: absolute;
-  transform: translateY(90%);
-  text-shadow: black 1px 0 10px;
   text-align: center;
 }
 
-article h2 span:last-child::first-letter {
-  text-transform: uppercase;
+main img {
+  width: 100%;
+  height: auto;
 }
 
-section h2 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 5vh;
-  position: relative;
+h1 {
+  font-family: "Alkatra", cursive;
+  font-weight: bold;
+  color: var(--red);
 }
 
-section h2 span:first-child {
-  color: var(--yellow);
-  text-shadow: black 1px 0 10px;
-  font-family: "Coda Caption", sans-serif;
-  font-size: 2em;
-}
-
-section h2 span:first-child::first-letter {
-  text-transform: uppercase;
-}
-
-section h2 span:last-child {
-  color: white;
-  font-family: "Norican", cursive;
-  font-size: 1.5em;
-  position: absolute;
-  transform: translateY(90%);
-  text-shadow: black 1px 0 10px;
-  text-align: center;
-}
-
-section h2 span:last-child::first-letter {
-  text-transform: uppercase;
-}
-
-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+nav {
   width: 100%;
 }
 
-table {
-  width: 90%;
-  border-spacing: 0px;
-  margin-top: 3vh;
-}
-
-table:last-child {
-  margin-bottom: 5vh;
-}
-
-th {
-  background: linear-gradient(to right, black, var(--blue));
-  text-align: left;
-  font-family: "Norican", cursive;
-  color: var(--yellow);
-  font-size: 1.5em;
-  padding: 1vh 0vh;
-  padding-left: 2vw;
-  margin-left: 1vw;
-  text-transform: capitalize;
-  border: 2px solid black;
-}
-
-td {
-  width: 25%;
-  text-align: left;
-  font-family: "Arial", sans-serif;
-  background-color: var(--blue);
+nav ul {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  gap: 5%;
+  list-style: none;
+  background-color: var(--red);
   color: white;
 }
 
-tr:nth-child(2n) td {
-  background-color: white;
-  color: black;
-}
-
-td:first-child {
-  padding-left: 1.5%;
-}
-
-td:nth-child(2) {
+nav ul li {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  padding: 2vh 1vh;
   text-align: center;
 }
 
-td:last-child {
-  width: 50%;
-  background-color: var(--yellow);
-  text-align: center;
-  font-family: "Arial", sans-serif;
-  font-size: 1.1em;
-}
-
-td a {
+a {
+  color: white;
   text-decoration: none;
-  width: 100%;
-  padding: 1vh 0vh;
-  display: inline-block;
-  background-color: var(--yellow);
-  outline: 2px solid black;
 }
 
-td a::first-letter {
+nav ul li::first-letter {
   text-transform: uppercase;
+}
+
+p {
+  color: var(--grey);
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 2vh 0vh;
+  line-height: 1.5em;
+}
+
+img {
+  display: block;
+}
+
+small {
+  display: block;
+  text-align: center;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 footer {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
   padding: 2vh 0vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  background-color: var(--black);
 }
 
-footer small {
-  font-family: "PT Sans", sans-serif;
-  color: black;
+.nav-item:hover {
+  background-color: var(--whitegreen);
+  color: var(--red);
+}
+
+.nav-item:hover .hover-container {
+  display: flex;
+}
+
+.hover-container {
+  z-index: 99;
+  position: absolute;
+  top: 100%;
+  left: 0vw;
+  width: 100%;
+  height: fit-content;
+  display: none;
+  background: linear-gradient(to bottom, var(--whitegreen), var(--blackgreen));
+}
+
+.hover-container {
+  color: white;
+  background-color: transparent;
+}
+
+li article {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: fit-content;
+}
+
+li article img {
   margin: 2vh 0vh;
 }
 
-footer img {
-  width: 15%;
+li article h3 {
+  margin: 2vh 0vh;
+  color: var(--black);
+  text-transform: capitalize;
 }
 
-section h2 {
-  margin-top: 5vh;
-}
-
-.forms {
-  padding-bottom: 5vh;
-  background: linear-gradient(to bottom left, var(--blue), black);
-}
-
-form {
+article ul {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2vh;
-  width: 90%;
-}
-
-fieldset {
-  border-color: var(--yellow);
-  position: relative;
-  display: flex;
-  justify-content: space-evenly;
-  padding: 5vh;
-  width: 100%;
-}
-
-legend {
-  width: fit-content;
-  margin: auto;
-  text-align: center;
-  font-size: 1.5em;
-  font-family: "PT Sans", sans-serif;
-}
-
-legend::first-letter {
-  text-transform: uppercase;
-}
-
-form div {
-  display: flex;
+  background-color: transparent;
   gap: 10px;
 }
 
-label {
-  display: block;
-  cursor: pointer;
-  font-family: "PT Sans", sans-serif;
+article ul li {
+  padding: 0vh 0vh;
 }
 
-label::first-letter {
-  text-transform: uppercase;
-}
-
-input[type="text"],
-input[type="email"],
-input[type="checkbox"] {
-  border: none;
-  border-bottom: var(--yellow) 1px solid;
-  background-color: transparent;
-  outline: none;
-}
-
-select {
-  width: 100%;
-  color: black;
-  padding: 1vh;
-  cursor: pointer;
-}
-
-option {
-  color: black;
-}
-
-option::first-letter {
-  text-transform: uppercase;
-}
-
-button[type="submit"] {
-  background-color: var(--yellow);
-  border-radius: 0px;
-  border: none;
-  width: fit-content;
-  padding: 1vw 2vh;
-  margin-bottom: 1vh;
-  cursor: pointer;
-}
-
-button[type="submit"]::first-letter {
+article ul li::first-letter {
   text-transform: uppercase;
 }
