--- a/css/base.css
+++ b/css/base.css
@@ -1,20 +1,15 @@
-@import url("https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@100;400&family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Open+Sans&display=swap");
 
 :root {
-  --blue: #28dbdb;
-  --darkBlue: #15036e;
-  --red: #ff2e6c;
+  --orange: #ff7300;
+  --grey: #6a5c6b;
+  --whitenessGrey: #d1ced2;
+  --white: #fff;
+  --blue: #064693;
 }
 
 * {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-}
-
-main {
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
