--- a/css/main.css
+++ b/css/main.css
@@ -192,19 +192,43 @@ form {
   flex-wrap: wrap;
 }
 
-form input {
+form .textfield {
   border: 1px solid var(--grey);
-  padding: 1.5vh;
+  padding: 1vh;
   border-radius: 50px;
   outline: none;
+  display: flex;
+  align-items: center;
+  cursor: text;
+  gap: 10px;
 }
 
-form input:nth-child(1),
-form input:nth-child(2) {
+form .textfield:nth-child(1),
+form .textfield:nth-child(2) {
   width: 49%;
 }
 
-form input:nth-child(3) {
+form .textfield:nth-child(3) {
+  margin-top: 2vh;
+  width: 100%;
+}
+
+.textfield img {
+  height: 5vh;
+  width: auto;
+}
+
+.textfield input {
+  border: none;
+  outline: none;
+  width: 100%;
+  height: 100%;
+}
+
+form .controls {
+  display: flex;
+  justify-content: center;
+  gap: 2vh;
   width: 100%;
   margin-top: 2vh;
 }
@@ -213,23 +237,12 @@ form input[type="submit"] {
   background-color: var(--blue);
   color: var(--white);
   border: none;
-  border-radius: 0px;
-  padding: 2vh;
-  width: 10vw;
+  padding: 2vh 2vw;
 }
 
 form input[type="reset"] {
   background-color: var(--grey);
-  border-radius: 0px;
   color: var(--white);
-  padding: 2vh;
-  width: 10vw;
-}
-
-form div {
-  display: flex;
-  justify-content: center;
-  gap: 2vh;
-  width: 100%;
-  margin-top: 2vh;
+  border: none;
+  padding: 2vh 2vw;
 }
